수정: css 수정(mobile)

--- a/client/src/style/Mypage.scss
+++ b/client/src/style/Mypage.scss
@@ -54,7 +54,7 @@
 
 
 // Desktop, Labtop
-@media (min-width: 1025px) {
+// @media (min-width: 1025px) {
     .mypage{
         margin-bottom: 160px;
         .mini-banner{
@@ -94,7 +94,7 @@
             &:nth-child(6n){margin-left: 0;}
         }
     }
-}
+// }
 
 
 // Tablet
