--- a/client/src/style/DailyReview.scss
+++ b/client/src/style/DailyReview.scss
@@ -37,7 +37,7 @@
 }
 
 // Desktop, Labtop
-@media (min-width: 1025px) {
+// @media (min-width: 1025px) {
     .daily-review{
         margin: 60px 0 160px;
         .title{font-size: 36px;}
@@ -61,7 +61,7 @@
             button{padding: 4px 60px; margin-top: 60px;}
         }
     }
-}
+// }
 
 // Tablet
 @media (min-width: 481px) and (max-width: 1024px) {
