--- a/client/src/style/GoalManagement.scss
+++ b/client/src/style/GoalManagement.scss
@@ -45,7 +45,7 @@
 
 
 // Desktop, Labtop
-@media (min-width: 1025px) {
+// @media (min-width: 1025px) {
     .goal-management{
         margin: 60px 0 160px;
         .title{font-size: 36px;}
@@ -97,9 +97,7 @@
             .btn{padding: 4px 60px;}
         }
     }
-
-    
-}
+// }
 
 // Tablet
 @media (min-width: 481px) and (max-width: 1024px) {
