--- a/client/src/style/Report.scss
+++ b/client/src/style/Report.scss
@@ -42,7 +42,7 @@
 }
 
 // Desktop, Labtop
-@media (min-width: 1025px) {
+// @media (min-width: 1025px) {
     .report{
         margin: 60px 0 160px;
         .title{font-size: 36px;}
@@ -91,7 +91,7 @@
             }
         }
     }
-}
+// }
 
 // Tablet
 @media (min-width: 481px) and (max-width: 1024px) {
